--- a/DesignMeCss/designMe.css
+++ b/DesignMeCss/designMe.css
@@ -1,41 +1,41 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
+font-family: Arial, sans-serif;
+line-height: 1.6;
 }
 
 .container {
-    width: 97%;
-    margin: auto;
-    max-width: 1200px;
+width: 97%;
+margin: auto;
+max-width: 1200px;
 }
 
 
 
 header {
-    /*background-color: #A1714C;*/
-    background-color:#FFD700; /*#5F4028*/
-   /* background:linear-gradient(rgba(0,0,0,0.5), #FFD700 );*/
-    color: #fff;
-    padding: 1rem 0;
+/*background-color: #A1714C;*/
+background-color:#FFD700; /*#5F4028*/
+/* background:linear-gradient(rgba(0,0,0,0.5), #FFD700 );*/
+color: #fff;
+padding: 1rem 0;
 }
 
 .logo {
-    display: flex;
-    padding-left: 1px;
-    
+display: flex;
+padding-left: 1px;
+
 }
 
 .logo h1 {
-    text-align: left ;
-    align-self: center;
-    margin-bottom: 0;  
-    padding: 2px;
+text-align: left ;
+align-self: center;
+margin-bottom: 0;  
+padding: 2px;
 }
 
 .logo img {
@@ -55,20 +55,20 @@ margin-bottom: 20px;
 
 
 header h1 {
-    float: left;
+float: left;
 }
 
 header .nav-row {
-    float: right;
+float: right;
 }
 
 header .nav-row ul {
-    list-style: none;
+list-style: none;
 }
 
 header .nav-row ul li {
-    display: inline;
-    margin-right: 14px;
+display: inline;
+margin-right: 14px;
 }
 
 header .nav-row ul li a {
@@ -87,79 +87,79 @@ border-radius: 4px;
 /* ***** Nav-Col ***** */
 
 #menuButton, #closeButton {    
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 30px;
-  color:white ;
-  font-weight: bold;
+border: none;
+background-color: transparent;
+cursor: pointer;
+font-size: 30px;
+color:white ;
+font-weight: bold;
 }
 
 #navMenu {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 400px; /* Adjust the width as needed */
-  background-color: #9B7159;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transition: transform 0.3s ease-in-out;
-  transform: translateX(100%); /* Start off hidden to the right */
+position: fixed;
+top: 0;
+right: 0;
+bottom: 0;
+width: 400px; /* Adjust the width as needed */
+background-color: #9B7159;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+transition: transform 0.3s ease-in-out;
+transform: translateX(100%); /* Start off hidden to the right */
 }
 
 i {
-   
+
 }
 
 .hidden { 
-    align-items: center;
-    justify-content: space-between;
+align-items: center;
+justify-content: space-between;
 }
 
 nav ul li {
-    list-style: none;
-    margin: 80px;
+list-style: none;
+margin: 80px;
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: bold;
+text-decoration: none;
+color: white;
+font-size: 1.5rem;
+font-weight: bold;
 }
 
 .hidden {
-  display: none;
+display: none;
 }
 
 #navMenu.visible {
-  transform: translateX(0); /* Slide in from the right */
+transform: translateX(0); /* Slide in from the right */
 }
 
 #closeButton,#menuButton {
-  position: absolute;
-  top: 45px;
-  right: 20px;
-  color: white;
-  
+position: absolute;
+top: 45px;
+right: 20px;
+color: white;
+
 }
 
 .cta-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #222A5E;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    margin-top: 1rem;
-    border-radius: 4px;
-    font-weight: bold;
+display: inline-block;
+padding: 10px 20px;
+background-color: #222A5E;
+color: #fff;
+border: none;
+cursor: pointer;
+margin-top: 1rem;
+border-radius: 4px;
+font-weight: bold;
 }
 
 .cta-button:hover {
-    background-color: #ff3f31;
+background-color: #ff3f31;
 }
 
 .cta-button-others { 
@@ -177,73 +177,73 @@ margin-top: 10px;
 }
 
 .cta-button-others:hover {
-    background-color: #ff3f31;
+background-color: #ff3f31;
 }
 
 
 .hero {
-    background: linear-gradient(rgba(0,0,0,0.5),#5F4028), url("../DesignMeImages/IMG-20241021-WA0006.jpg") no-repeat center center/cover;
-    color: #fff;
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    
+background: linear-gradient(rgba(0,0,0,0.5),#5F4028), url("../DesignMeImages/IMG-20241021-WA0006.jpg") no-repeat center center/cover;
+color: #fff;
+height: 80vh;
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+
 }
 
 .hero h2 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    color: #FFD700;
+font-size: 3rem;
+margin-bottom: 1rem;
+color: #FFD700;
 }
 
 .featured-products {
-    padding: 2rem 0;
-    background-color:#e6f0ff;
+padding: 2rem 0;
+background-color:#e6f0ff;
 }
 
 .featured-products h2 {
-    text-align: center;
-    margin-bottom: 1.5rem;
+text-align: center;
+margin-bottom: 1.5rem;
 }
 
 .products-grid {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+display: flex;
+justify-content: space-between;
+gap: 20px;
 }
 
 .product {
-    background-color: #f4f4f4;
-    padding: 1rem;
-    text-align: center;
-    flex: 1;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
+background-color: #f4f4f4;
+padding: 1rem;
+text-align: center;
+flex: 1;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .product:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+transform: scale(1.05);
+box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 }
 
 .product img {
-    max-width: 100%;
-    height: auto;
+max-width: 100%;
+height: auto;
 }
 
 .services {
-    padding: 2rem 0;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
+padding: 2rem 0;
+background-color: #333;
+color: #fff;
+text-align: center;
 }
 
- button a {
-    text-decoration: none;
-    color: #fff;
-    }
+button a {
+text-decoration: none;
+color: #fff;
+}
 
 
 /* Products Page */ 
@@ -307,14 +307,14 @@ background-color: #fff;
 }
 
 .contact-us h2 {
-   text-align: center;
+text-align: center;
 }
 
 .contact-us p {
-    margin-bottom: 1.5rem;
-    color: #555;
-    text-align: center;
-    
+margin-bottom: 1.5rem;
+color: #555;
+text-align: center;
+
 }
 
 .contact-us form { 
@@ -376,105 +376,128 @@ margin-top: 2rem;
 
 
 footer {
-    background-color: #222;
-    color: #fff;
-    text-align: center;
-    padding: 1rem 0;
-    margin-top: 1rem;
+background-color: #222;
+color: #fff;
+text-align: center;
+padding: 1rem 0;
+margin-top: 1rem;
 }
 
 /* Media Queries */
 
 @media (min-width:1024px){
-    .nav-container {
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .nav-container h1 {
-        align-self: center;
-        margin-bottom: 0;
-        margin-right: 20px;
-        font-size: 2rem ;    
-        }    
-    
-    
-  .nav-row a {
-      font-size: 1.0rem;
-  }
-    .nav-container .cta-button {
-        align-self: center;
-        margin-top: 0;
-    }
-    
-    /**** *Pages* ***/
-    
-    .nav-container-pages {
-        display: flex;
-        justify-content: space-between;   
-        width: 100%; 
-        
-        }    
-    
-    .nav-container-pages h1 {
-        align-self: center;
-        color: red;
-        margin-bottom: 0;
-        height: auto;
-    }
-    
-    .nav-container-pages .nav-row {
-        align-self: center;
-    }
+.nav-container {
+display: flex;
+justify-content: space-between;
+}
+
+.nav-container h1 {
+align-self: center;
+margin-bottom: 0;
+margin-right: 20px;
+font-size: 2rem ;    
+}    
+
+
+.nav-row a {
+font-size: 1.0rem;
+}
+.nav-container .cta-button {
+align-self: center;
+margin-top: 0;
+}
+
+/**** *Pages* ***/
+
+.nav-container {
+display: flex;
+justify-content: space-between;   
+width: 100%; 
+margin-right: 0 auto;
+
+}    
+.nav-container-pages {
+display: flex;
+justify-content: space-between;   
+width: 100%; 
+
+}   
+
+.nav-container-pages .logo {
+margin-right: 40px;
+}
+
+.nav-container-pages h1 {  /* Not Responsive */
+align-self: center;
+color: red;
+margin-bottom: 0;
+margin-right: 40px;
+height: auto;
+}
+
+.nav-container-pages .nav-row {
+align-self: center;
+}
+
+.nav-container .nav-row ul {
+margin-right: 40px;
+}
+
 }
 
 @media (min-width:768.9px){
 
 .nav-container-page-1{
-    display: flex;
+display: flex;
+justify-content: space-between;
 }
 
 .nav-container-page-1 h1 {
-    font-size: 1.3rem;
-}
-
-.nav-container-page-1 button {
-  
-  
+font-size: 1.3rem;
 }
 
 .nav-container-page-1 .nav-row ul li {
-    margin-right: 6px;
+margin-right: 6px;
+margin-left: 2px;
+align-self: center;
 }
 
+.nav-container-page-1 .nav-row ul {
+display: flex;
+justify-content: space-between;
+padding: 2px;
+}
+
+.nav-container-page-1 .nav-row ul li a{
+font-size: 16px;
+padding: 0;
+margin-right: 6px;
+}
 
 .nav-container-pages {
-        display: flex;
-        justify-content: space-between;
-    }    
+display: flex;
+justify-content: space-between;
+}    
 
 .logo-pages {
-  flex: 1;
-}
-
-.logo h1 {
-
+flex: 1;
 }
 
 .logo-pages h1{
-    margin: 2px;
-    padding: 2px;
-    flex: 1;
-    text-align: center;
+margin: 2px;
+padding: 2px;
+flex: 1;
+text-align: center;
 }
 
 .logo img {
-    margin-right: 2px;
-    margin-right: 1rem;
+margin-right: 2px;
+margin-right: 1rem;
 }
- 
-.nav-row {
-  align-self: center;
+
+.nav-row, .nav-container-pages .nav-row {
+align-self: center;
+flex: 1;
 }
 
 .nav-row ul {
@@ -483,48 +506,62 @@ padding: 2px;
 justify-content: center;
 align-items: center;
 }
-    
-.nav-row ul li a{
-  font-size: 13px;
+
+.nav-container-pages .nav-row ul  {
+justify-content: space-between;
 }
-    
+
+.nav-row ul li a{
+font-size: 13px;
+}
+
+.nav-container-pages .nav-row ul a {
+padding: 0;
+font-size: 1.2rem;
+}
 .nav-col {
-      display: none;
-    }
+display: none;
+}
+
+.nav-container-page-1 .cta-button {
+align-self: center;
+margin: 0;
+}
+
 }
 
 
 @media (max-width: 768px) {
 
 header h1, header .nav-row {
-     float: none;
-     text-align: center;
+float: none;
+text-align: center;
 }
 
 .logo {
-   justify-content: space-between;
-    width: 60%;
+justify-content: space-between;
+width: 60%;
 }
 
 header .nav-row ul li {
-    display: block;
-    margin: 5px 0;
+display: block;
+margin: 5px 0;
 }
 
 .nav-row {
-    display: none;
+display: none;
 }
 
 .products-grid {
-    flex-direction: column;
+flex-direction: column;
 }
 
 .hero h2 {
-    font-size: 2rem;
+font-size: 2rem;
 }
-                            
-    /*** *Pages* ****/
-   
+            
+/*** *Pages* ****/
+
 .products-grid, .services-grid { 
 grid-template-columns: 1fr; 
 } 
@@ -546,12 +583,12 @@ width: 100%;
 @media (max-width: 480px) { 
 
 .logo {
-   justify-content: space-between;
-    width: 75%;
+justify-content: space-between;
+width: 75%;
 }
 
 .logo h1 {
-    text-align: center;
+text-align: center;
 }
 
 h2 { 
